@@ -11,3 +11,4 @@ Jens Gecius <jens@gecius.de>
 Daniel Gloeckner <daniel-gl@gmx.net>
 Gerhard Gappmeier <gerhard.gappmeier@ascolab.com>
 Erik Kerger <erik@kedo.com>
+Alexander Kurz <akurz@blala.de>
