@@ -1,3 +1,7 @@
+2005-06-21  Christian Stimming <stimming@tuhh.de>
+
+	* src/lib/methods.cc: B4 and B5 methods added by Alexander Kurz
+
 2005-05-24  Christian Stimming <stimming@tuhh.de>
 
 	* configure.in: Release version 1.5
